Fixed alignments in performance page

--- a/components/ResponsiveNavbar.module.scss
+++ b/components/ResponsiveNavbar.module.scss
@@ -158,8 +158,9 @@
 }
 
 .navItemMobile {
-	list-style: none;
 	font-family: 'Mono';
+	font-size: 20px;
+	list-style: none;
 	padding: 48px 24px 0 24px;
 }
 
